# mns-chatbot-backend

./: conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: master_mns-chatbot-backend.yml
.python_packages/debugpy-1.8.11.dist-info/: RECORD
.python_packages/distro-1.9.0.dist-info/: RECORD
.python_packages/httpx-0.28.1.dist-info/: RECORD
.python_packages/ipython-8.31.0.dist-info/: RECORD
.python_packages/jupyter_client-8.6.3.dist-info/: RECORD
.python_packages/jupyter_core-5.7.2.dist-info/: RECORD
.python_packages/openai-1.59.5.dist-info/: RECORD
.python_packages/pygments-2.19.1.dist-info/: RECORD
.python_packages/python_dotenv-1.0.1.dist-info/: RECORD
.python_packages/pywin32-308.dist-info/: RECORD
.python_packages/tqdm-4.67.1.dist-info/: RECORD
mns-chatbot-function/: __init__.py
test/: test_db_manager.py  test_openai_manager.py
utils/database/: db_manager.py
utils/openai/: openai_manager.py
